--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-    <title>Felix erste WebSite</title>
+    <title>RiseClan WebSite</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -18,6 +18,12 @@
             <a href="#">Infos</a>
             <a href="#">Bewerben</a>
         </div>
+    </div>
+    <div id="text">
+        <h5>Herzlich Wilkommen auf der RiseClan Seite <p> Für Social Media scorll ganz nach unten</p>
+            <p>Klicke oben auf das wofür du hier bist, </p>
+            <p>und du wirst zu der Seite weitergeleitet</p>
+        </h5>
     </div>
     <div id="image">
         <img src="image.jpg" alt="Marshmello Bild">
